--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,16 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.ts",
+    "start": "ts-node index.ts",
     "dev": "nodemon index.ts",
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "vercel-build": "echo hello"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql": "^2.18.1"
   },
