--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native": "0.73.6",
     "react-native-maps": "^1.15.1",
     "react-native-web": "~0.19.6",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "expo-file-system": "~16.0.9",
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
