--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@types/react": "~18.2.45",
+    "crypto": "^1.0.1",
     "expo": "~50.0.17",
+    "expo-file-system": "~16.0.9",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-crypto": "^2.2.0",
+    "react-native-hash": "^3.0.3",
     "react-native-maps": "^1.15.1",
+    "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.6",
-    "typescript": "^5.3.0",
-    "expo-file-system": "~16.0.9",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
