--- a/package.json
+++ b/package.json
@@ -9,24 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@expo/metro-runtime": "~3.2.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@types/react": "~18.2.45",
     "crypto": "^1.0.1",
-    "expo": "~50.0.17",
-    "expo-file-system": "~16.0.9",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.2",
+    "expo-crypto": "~13.0.2",
+    "expo-file-system": "~17.0.1",
+    "expo-router": "~3.5.11",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-crypto": "^2.2.0",
-    "react-native-maps": "^1.15.1",
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-maps": "1.14.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
     "react-native-uuid": "^2.0.2",
-    "react-native-web": "~0.19.6",
-    "typescript": "^5.3.0"
+    "react-native-web": "~0.19.10",
+    "rn-nodeify": "^10.3.0",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
