--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.10",
     "rn-nodeify": "^10.3.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "expo-splash-screen": "~0.27.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
