--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@types/react": "~18.2.45",
     "crypto": "^1.0.1",
-    "expo": "^51.0.2",
+    "expo": "^51.0.8",
     "expo-crypto": "~13.0.2",
     "expo-file-system": "~17.0.1",
-    "expo-router": "~3.5.11",
+    "expo-router": "^3.5.14",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-maps": "1.14.0",
     "react-native-paper": "^5.12.3",
