--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native": "0.74.1",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.14.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
